# crypto-trading

./: .env.example  .gitignore  README.md  pyproject.toml  run.cmd  run.ps1  web.cmd
config/: settings.toml
docs/: REQUIREMENTS.md  STRATEGY_VALIDATION.md  exit_filter_optimization_2026-06-27.md  new_symbol_strategy_filter_exit_optimization_2026-06-28.md
src/crypto_trader/: __init__.py  __main__.py  backtest.py  config.py  domain.py  env.py  execution.py  history_cache.py  indicators.py  notifications.py  optimization.py  paper.py  realtime.py  risk.py  scanner.py  storage.py  strategies.py  strategy.py  universe.py  validation.py  web.py
src/crypto_trader/exchange/: bitget.py
src/crypto_trader/web_static/: app.js  index.html  styles.css
tests/: test_adaptive_liangyi_sixiang.py  test_backtest.py  test_bitget.py  test_capital_sync.py  test_env.py  test_execution.py  test_optimization.py  test_paper.py  test_realtime.py  test_risk.py  test_scanner.py  test_schedule.py  test_storage.py  test_universe.py  test_validation.py  test_web.py
tradingview/: breakout_retest_strategy.pine  volatility_squeeze_continuation_strategy.pine
