[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trader"
version = "0.1.0"
description = "Risk-first Bitget USDT perpetual trend trading system"
requires-python = ">=3.11"
dependencies = ["websocket-client>=1.9,<2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
